# section-properties

./: CMakeLists.txt
Eigen/: Core
Eigen/src/Core/: AssignEvaluator.h
Eigen/src/Core/arch/AVX512/: PacketMath.h
Eigen/src/Core/util/: Memory.h
Eigen/src/Geometry/: AlignedBox.h  Umeyama.h
Eigen/src/IterativeLinearSolvers/: SolveWithGuess.h
Eigen/src/LU/arch/: InverseSize4.h
Eigen/src/SparseLU/: SparseLU.h
analysis/: fea.cpp  fea.h  solver.cpp  solver.h
libdistmesh/include/distmesh/: constants.h  distance_function.h  distmesh.h  functional.h  triangulation.h
libdistmesh/src/: distance_function.cpp  distmesh.cpp  functional.cpp  triangulation.cpp  utils.cpp
pre/: geometry.cpp  geometry.h  pre.cpp  pre.h
